aplicando sass piolita y algo de seo

--- a/productos/productos.html
+++ b/productos/productos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>wes fumigaciones</title>
-    <link rel="stylesheet" href="../assets/css/estilos.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,17 +11,21 @@
     <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Empresa radicada en vila real, en el barrio desde su fundacion en el año 2003. Especializada en control de plagas urbanas garantizando eficacia al mejor precio de la zona">
+    <meta name="keywords" content="CONTROL DE PLAGAS, FUMIGACION, FUMIGACIÓN, RATAS, HORMIGAS, CUCARACHAS, WASPS, TANQUE, DESINFECCION, DESINSECTACION">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../jquery.slim.min.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="../scss/estilos.scss">
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/estilos.css">
 </head>
 <body>
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6"><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
-                <div class="col-6 d-flex align-items-center">
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-block d-lg-block d-xl-block "><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-flex d-lg-flex  d-xl-flex align-items-center">
                         <ul>
                             <li><a class="navbarheader" href="../index.html">INICIO</a></li>
                             <li><a class="navbarheader" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
@@ -33,21 +37,36 @@
             </div>
         </div>
     </header>
-que productos utilizamos
+<section class="container">
+    <div class="row">
+        <div class=" bloqueProductos col-12">
+            <div class="card">
+                <div class="card-body">
+                    <p class="card-text">DELTAGLEX 1.5%</p>
+                </div>
+                <div class="card-body">
+                    <p class="card-text">La deltametrina, ingrediente activo de Deltaglex 1.5®,
+                    pertenece al grupo de los piretroides. Es una molécula de baja toxicidad sobre mamíferos,
+                    con muy buena capacidad insecticida y efecto de volteo</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <footer>
     <section>
         <div class="headerfooter">
                 <div class="d-flex justify-content-around">
-                    <span class="navbarheader">4294-0805</span>
-                    <span class="navbarheader">11-039-456</span>
-                    <span class="navbarheader">instagram</span> 
-                    <span class="navbarheader">facebook</span>
+                    <span class="navbarfooter">4294-0805</span>
+                    <span class="navbarfooter">11-039-456</span>
+                    <span class="navbarfooter">instagram</span> 
+                    <span class="navbarfooter">facebook</span>
                 </div>
                 <div class="d-flex justify-content-around">
-                    <i class="fa fa-phone navbarheader"></i>
-                    <i class="fa-brands fa-whatsapp navbarheader"></i>
-                    <i class="fa fa-instagram navbarheader"></i>
-                    <i class="fa fa-facebook navbarheader"></i>
+                    <i class="fa fa-phone navbarfooter"></i>
+                    <i class="fa-brands fa-whatsapp navbarfooter"></i>
+                    <i class="fa fa-instagram navbarfooter"></i>
+                    <i class="fa fa-facebook navbarfooter"></i>
                 </div>
         </div>
     </section>
