--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Empresa radicada en vila real, en el barrio desde su fundacion en el año 2003. Especializada en control de plagas urbanas garantizando eficacia al mejor precio de la zona">
+    <meta name="keywords" content="CONTROL DE PLAGAS, FUMIGACION, FUMIGACIÓN, RATAS, HORMIGAS, CUCARACHAS, WASPS, TANQUE, DESINFECCION, DESINSECTACION">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="/jquery.slim.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
@@ -23,8 +25,8 @@
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6"><a href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
-                <div class="col-6 d-flex align-items-end justify-content-end">
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-block d-lg-block d-xl-block "><a href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-flex d-lg-flex  d-xl-flex align-items-center">
                         <ul>
                             <li><a class="navbarheader" href="./nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
                             <li><a class="navbarheader" href="./maquinaria/maquinaria.html">maquinaria</a></li>
@@ -33,22 +35,40 @@
                         </ul>
                 </div>
             </div>
+            <div class="row">
+                <nav class="navbar navbar-light bg-light d-md-none d-lg-none d-xl-none">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                        </button>
+                    </div>
+                </nav>
+                <div class="collapse" id="navbarToggleExternalContent3">
+                    <div class="bg-light shadow-3 p-4">
+                        <button class="btn btn-link btn-block border-bottom m-0">holaaaaaaaaaa 1</button>
+                        <button class="btn btn-link btn-block border-bottom m-0">aaaaaaaaaaaaaaaaaaaaaaaaaaaaa 2</button>
+                        <button class="btn btn-link btn-block m-0">no me funciona no se porque 3</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
     <section class="container-fluid mt-4">
         <div class="row">
-            <div class="col-12 mb-0">
+            <div class=" col-12 mb-0">
                 <div class="card">
-                    <img class="card-img" src="./assets/imagenes/HD aplicador.jpg" height="325px">
+                    <img class="card-img" src="./assets/imagenes/04.jpg" height="325px">
                     <div class="card-img-overlay d-flex justify-content-center align-items-center">
-                        <p class="card-text display-4">nuestro servicio hace la diferencia</p>
+                        <p class="card-text display-3 sombrax">nuestro servicio hace la diferencia</p>
                     </div>
                 </div>
             </div>
             <div class="col-12">
                 <div class="sectioncortapag d-flex flex-nowrap justify-content-around">
-                    <p class="display-4">empresa habilitada en provincia de BSAS</p><i class="  maschico fa-solid fa-file-circle-check" ></i>
+                    <p class="display-4">empresa habilitada en provincia de BSAS</p><i class=" fa-solid fa-file-circle-check" ></i>
                     
                 </div>
             </div>
@@ -93,16 +113,16 @@
         <section>
             <div class="headerfooter">
                     <div class="d-flex justify-content-around">
-                        <span class="navbarheader">4294-0805</span>
-                        <span class="navbarheader">11-039-456</span>
-                        <span class="navbarheader">instagram</span> 
-                        <span class="navbarheader">facebook</span>
+                        <span class="navbarfooter">4294-0805</span>
+                        <span class="navbarfooter">11-039-456</span>
+                        <span class="navbarfooter">instagram</span> 
+                        <span class="navbarfooter">facebook</span>
                     </div>
                     <div class="d-flex justify-content-around">
-                        <i class="fa fa-phone navbarheader"></i>
-                        <i class="fa-brands fa-whatsapp navbarheader"></i>
-                        <i class="fa fa-instagram navbarheader"></i>
-                        <i class="fa fa-facebook navbarheader"></i>
+                        <i class="fa fa-phone navbarfooter"></i>
+                        <i class="fa-brands fa-whatsapp navbarfooter"></i>
+                        <i class="fa fa-instagram navbarfooter"></i>
+                        <i class="fa fa-facebook navbarfooter"></i>
                     </div>
             </div>
         </section>
