--- a/servicios/servicios.html
+++ b/servicios/servicios.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>wes fumigaciones</title>
-    <link rel="stylesheet" href="../assets/css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,9 +10,13 @@
     <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Empresa radicada en vila real, en el barrio desde su fundacion en el año 2003. Especializada en control de plagas urbanas garantizando eficacia al mejor precio de la zona">
+    <meta name="keywords" content="CONTROL DE PLAGAS, FUMIGACION, FUMIGACIÓN, RATAS, HORMIGAS, CUCARACHAS, WASPS, TANQUE, DESINFECCION, DESINSECTACION">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../jquery.slim.min.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../scss/estilos.scss">
+    <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/estilos.css">
 
 </head>
@@ -21,8 +24,8 @@
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6"><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
-                <div class="col-6 d-flex align-items-center">
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-block d-lg-block d-xl-block "><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-flex d-lg-flex  d-xl-flex align-items-center">
                         <ul>
                             <li><a class="navbarheader" href="../index.html">INICIO</a></li>
                             <li><a class="navbarheader" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
@@ -38,7 +41,7 @@
 <div class="container-fluid">
 <div class="row">
     <div class="col-12 d-flex justify-content-center ">
-        <h3>Que servicios ofrecemos?</h3>
+        <h1>¿Que servicios ofrecemos?</h1>
     </div>
 </div>
 <div class="row">
@@ -105,7 +108,7 @@ El crecimiento poblacional de los últimos 50 años ha producido un crecimiento 
             <div class="card-body">
                 <h4 class="card-title d-flex justify-content-center">Control murcielagos</h4>
                 <p class="card-text">
-                    Esta especie que tiene un rol importantísimo en el manejo ecológico del medio, d
+                    Esta especie que tiene un rol importantísimo en el manejo ecológico del medio<a href="https://www.youtube.com/watch?v=tPGW33Ekpvg&list=RDge3-8yB3P-Y&index=4">.</a>
                 </p>
             </div>
         </div>
@@ -120,16 +123,16 @@ El crecimiento poblacional de los últimos 50 años ha producido un crecimiento 
     <section>
         <div class="headerfooter">
                 <div class="d-flex justify-content-around">
-                    <span class="navbarheader">4294-0805</span>
-                    <span class="navbarheader">11-039-456</span>
-                    <span class="navbarheader">instagram</span> 
-                    <span class="navbarheader">facebook</span>
+                    <span class="navbarfooter">4294-0805</span>
+                    <span class="navbarfooter">11-039-456</span>
+                    <span class="navbarfooter">instagram</span> 
+                    <span class="navbarfooter">facebook</span>
                 </div>
                 <div class="d-flex justify-content-around">
-                    <i class="fa fa-phone navbarheader"></i>
-                    <i class="fa-brands fa-whatsapp navbarheader"></i>
-                    <i class="fa fa-instagram navbarheader"></i>
-                    <i class="fa fa-facebook navbarheader"><a href="https://www.youtube.com/watch?v=tPGW33Ekpvg&list=RDge3-8yB3P-Y&index=4">seguinos</a></i>
+                    <i class="fa fa-phone navbarfooter"></i>
+                    <i class="fa-brands fa-whatsapp navbarfooter"></i>
+                    <i class="fa fa-instagram navbarfooter"></i>
+                    <i class="fa fa-facebook navbarfooter"></i>
                 </div>
         </div>
     </section>
