proyecto final entrega 3

--- a/maquinaria/maquinaria.html
+++ b/maquinaria/maquinaria.html
@@ -23,15 +23,34 @@
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-block d-lg-block d-xl-block "><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
-                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-flex d-lg-flex  d-xl-flex align-items-center">
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-block d-xl-block "><a href="../index.html"><img src="../assets/imagenes/LOGO_alt2.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-flex justify-content-between d-xl-flex align-items-center">
                         <ul>
-                            <li><a class="navbarheader" href="../index.html">INICIO</a></li>
                             <li><a class="navbarheader" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
                             <li><a class="navbarheader" href="../maquinaria/maquinaria.html">maquinaria</a></li>
                             <li><a class="navbarheader" href="../productos/productos.html">productos</a></li>
                             <li><a class="navbarheader" href="../servicios/servicios.html">servicios</a></li>
                         </ul>
+                </div>
+            </div>
+            <div class="row justify-content-between">
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-block d-md-block d-lg-none d-xl-none "><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
+                
+                <nav class="navbar navbar-light bg-light d-md-flex d-lg-none d-xl-none d-flex">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                        </button>
+                    </div>
+                </nav>
+                <div class="collapse" id="navbarToggleExternalContent3">
+                    <div class="bg-light shadow-3 p-4">
+                        <button class="btn btn-link btn-block border-bottom m-0">holaaaaaaaaaa 1</button>
+                        <button class="btn btn-link btn-block border-bottom m-0">aaaaaaaaaaaaaaaaaaaaaaaaaaaaa 2</button>
+                        <button class="btn btn-link btn-block m-0">no me funciona no se porque 3</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -45,51 +64,68 @@
             <div class="col-12 col-md-4 col-lg-3 col-xl-3 mb-2">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">Motomochila</p>
+                        <h6 class="card-text d-flex justify-content-center">Motomochila</h6>
                     </div>
                     <img src="../assets/imagenes/motomochila.jpg" alt="Card image">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam nam magni natus rem voluptates</p>
+                        <p class="card-text">La motopulverizadora tiene el 
+                            rango de pulverización más potente de la industria, con un rango de nebulización 
+                            horizontal de 9m. Ideal para trabajos pequeños, medianos y grandes, este rociador
+                            es elogiado por su diseño cómodo, proporcionando el mejor rendimiento y facilidad
+                            de uso para el operador, por su bajo peso y fácil maniobrabilidad.
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-4 col-lg-3 col-xl-3 mb-2">
                 <div class="card">
-                    <div class="card-body">
-                        <p class="card-text">pulverizadora manual</p>
+                    <div class="card-body d-flex justify-content-center">
+                        <h6 class="card-text">pulverizadora manual</h6>
                     </div>
                     <img src="../assets/imagenes/aspersora manual.jpg" alt="Card image">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos, dolore voluptatum? Rem q</p>
+                        <p class="card-text">La pulverizadora manual está preparada pa
+                            ra llegar a una presión de 3 BAR mediante su manilla de presión manual y una ca
+                            pacidad de 5L.
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-4 col-lg-3 col-xl-3 mb-2">
                 <div class="card">
-                    <div class="card-body">
-                        <p class="card-text">termo-fog</p>
+                    <div class="card-body d-flex justify-content-center">
+                        <h6 class="card-text">termo-fog</h6>
                     </div>
                     <img src="../assets/imagenes/termo fog.jpg" alt="Card image">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Off.</p>
+                        <p class="card-text">Termonebulizadora es ideal para trabajos industriales.
+                            Funciona en seco y es capaz de dispersar desinfectantes, desodorizantes,
+                            germicidas e insecticidas para aplicaciones en galpones, galeras, y fabrica
+                            s. También puede ser utilizada para control de plagas en áreas abiertas com
+                            o parques, canchas de golf, futbol y otros.
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-4 col-lg-3 col-xl-3 mb-2">
                 <div class="card">
-                    <div class="card-body">
-                        <p class="card-text">ULV</p>
+                    <div class="card-body d-flex justify-content-center">
+                        <h6 class="card-text">ULV</h6>
                     </div>
                     <img src="../assets/imagenes/ULV.jpg" alt="Card image">
                     <div class="card-body">
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, atque ad. Esse expedita nulla velit co</p>
+                        <p class="card-text">Equipo eléctrico que permiterks 
+                            generar una neblina con gotas desde 15 - 50 micras.
+                            Tiene como función impregnar el área de producto deseada por el operador.
+                            Equipo profesional uso industrial (desinfección, control de olores, humidificación)
+                        </p>
                     </div>
                 </div>
             </div>
     </div>
-<footer>
+<footer class="headerfooter">
     <section>
-        <div class="headerfooter">
+        <div>
                 <div class="d-flex justify-content-around">
                     <span class="navbarfooter">4294-0805</span>
                     <span class="navbarfooter">11-039-456</span>
@@ -104,5 +140,53 @@
                 </div>
         </div>
     </section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="well well-sm">
+                    <form class="form-horizontal" method="post">
+                        <fieldset>
+                            <legend class="text-center header">Contactanos</legend>
+                            <div class="formAreas form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user small"></i></span>
+                                <div class="col-md-8">
+                                    <input id="fname" name="name" type="text" placeholder="Nombre y apellido" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-location-pin small"></i></i></span>
+                                <div class="col-md-8">
+                                    <input id="lname" name="name" type="text" placeholder="¿De qué zona sos?" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o small"></i></span>
+                                <div class="col-md-8">
+                                    <input id="email" name="email" type="text" placeholder="Dejanos tu E-mail" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square small"></i></span>
+                                <div class="col-md-8">
+                                    <input id="phone" name="phone" type="text" placeholder="Dejanos tu Nümero telefonoico" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o small"></i></span>
+                                <div class="col-md-8">
+                                    <textarea class="form-control" id="message" name="message" placeholder="¿Que tipo de servicio estarías estando necesitando?." rows="7"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12 text-center">
+                                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 </body>
