--- a/servicios/servicios.html
+++ b/servicios/servicios.html
@@ -24,15 +24,34 @@
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-block d-lg-block d-xl-block "><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
-                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-flex d-lg-flex  d-xl-flex align-items-center">
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-block d-xl-block "><a href="../index.html"><img src="../assets/imagenes/LOGO_alt4.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-flex justify-content-between d-xl-flex align-items-center">
                         <ul>
-                            <li><a class="navbarheader" href="../index.html">INICIO</a></li>
                             <li><a class="navbarheader" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
                             <li><a class="navbarheader" href="../maquinaria/maquinaria.html">maquinaria</a></li>
                             <li><a class="navbarheader" href="../productos/productos.html">productos</a></li>
                             <li><a class="navbarheader" href="../servicios/servicios.html">servicios</a></li>
                         </ul>
+                </div>
+            </div>
+            <div class="row justify-content-between">
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-block d-md-block d-lg-none d-xl-none "><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
+                
+                <nav class="navbar navbar-light bg-light d-md-flex d-lg-none d-xl-none d-flex">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                        </button>
+                    </div>
+                </nav>
+                <div class="collapse" id="navbarToggleExternalContent3">
+                    <div class="bg-light shadow-3 p-4">
+                        <button class="btn btn-link btn-block border-bottom m-0">holaaaaaaaaaa 1</button>
+                        <button class="btn btn-link btn-block border-bottom m-0">aaaaaaaaaaaaaaaaaaaaaaaaaaaaa 2</button>
+                        <button class="btn btn-link btn-block m-0">no me funciona no se porque 3</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -119,9 +138,9 @@ El crecimiento poblacional de los últimos 50 años ha producido un crecimiento 
 
 
 
-<footer>
+<footer class="headerfooter">
     <section>
-        <div class="headerfooter">
+        <div>
                 <div class="d-flex justify-content-around">
                     <span class="navbarfooter">4294-0805</span>
                     <span class="navbarfooter">11-039-456</span>
@@ -136,5 +155,53 @@ El crecimiento poblacional de los últimos 50 años ha producido un crecimiento 
                 </div>
         </div>
     </section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="well well-sm">
+                    <form class="form-horizontal" method="post">
+                        <fieldset>
+                            <legend class="text-center header">Contactanos</legend>
+                            <div class="formAreas form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user small"></i></span>
+                                <div class="col-md-8">
+                                    <input id="fname" name="name" type="text" placeholder="Nombre y apellido" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-location-pin small"></i></i></span>
+                                <div class="col-md-8">
+                                    <input id="lname" name="name" type="text" placeholder="¿De qué zona sos?" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o small"></i></span>
+                                <div class="col-md-8">
+                                    <input id="email" name="email" type="text" placeholder="Dejanos tu E-mail" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square small"></i></span>
+                                <div class="col-md-8">
+                                    <input id="phone" name="phone" type="text" placeholder="Dejanos tu Nümero telefonoico" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o small"></i></span>
+                                <div class="col-md-8">
+                                    <textarea class="form-control" id="message" name="message" placeholder="¿Que tipo de servicio estarías estando necesitando?." rows="7"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12 text-center">
+                                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 </body>
