--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
             <div class="col-12 col-md-6 col-lg-6 col-xl-6 mb-3 mb-xl-1">
                 <div class="card">
                     <img class="card-img-top" src="./assets/imagenes/jefa.jpg" height="200px">
-                    <div class="card-body"> "Deseamos poner en su conocimiento las operatorias y servicios que estamos en condiciones de poder ofrecerle.
-                        WES FUMIGACIONES fue creada en 2003; su Titular Johana Djetzerniak, está ligada a la actividad de Saneamiento Ambiental desde 1996, 
+                    <div class="card-body"> "Deseamos poner en su conocimiento las operatorias y servicios que estamos en condic
+                        iones de poder ofrecerle.
+                        WES FUMIGACIONES fue creada en 2003; su Titular Johana Djetzerniak, está ligada a la actividad de San
+                        eamiento Ambiental desde 1996, 
                         participando de otras empresas de similares características. 
                         <a class="linksentext" href="./nuestraempresa/nuestraempresa.html" >conoce más</a>
                     </div>
@@ -96,13 +98,15 @@
             <div class="col-12 col-md-6 col-lg-6 col-xl-6 mb-3 mb-xl-1">
                 <div class="card">
                     <img class="card-img-top" src="./assets/imagenes/aplicador 2.jpg" height="200px">
-                    <div class="card-body">Contamos con un parque de maquinarias actualizado para realizar distintos sistemas de aplicación según la situación lo requiera:
-                        Aspersión manual, mecánica, termonebulización, ultra bajo volumen, espolvoreo, gota controlada y trampeo. <a class="linksentext" href="./servicios/servicios.html">conocer más</a> </div>
+                    <div class="card-body">Contamos con un parque de maquinarias actualizado para realizar distintos sist
+                        emas de aplicación según la situación lo requiera:
+                        Aspersión manual, mecánica, termonebulización, ultra bajo volumen, espolvoreo, gota contro
+                        lada y trampeo. <a class="linksentext" href="./servicios/servicios.html">conocer más</a> </div>
                 </div>
             </div>
             <div class="col-12 d-flex justify-content-center"><h2>Maquinaria</h2></div>
             <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
-            <img src="./assets/imagenes/aspersora manual.jpg"  alt="">
+                <img src="./assets/imagenes/aspersora manual.jpg"  alt="">
             </div>  
             <div class="col-12 d-none d-xl-block d-lg-block d-md-block col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
                 <img src="./assets/imagenes/termo fog.jpg"  alt="">
@@ -110,7 +114,28 @@
             <div class=" col-12 d-none d-xl-block d-lg-block col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
                 <img src="./assets/imagenes/motomochila.jpg" alt="">
             </div>
-            <div class="col-6 col-md-12 col-lg-12 col-xl12">Contamos con un parque de maquinarias actualizado para realizar distintos sistemas de aplicación según la situación lo requiera <a href="./maquinaria/maquinaria.html" class="linksentext">conocer más</a></div>
+            <div class="col-6 col-md-12 col-lg-12 col-xl12 d-flex justify-content-center align-items-center">
+                <p>Contamos con un parque de maquinarias actualizado para realizar distintos sistemas de aplic
+                    ación según la situación lo requiera <a href="./maquinaria/maquinaria.html" class="linksentext">conocer más</a>
+                </p>
+            </div>
+            <div class="col-12 d-flex justify-content-center"><h2>Servicios</h2></div>
+            <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
+                <img src="./assets/imagenes/aplicador 2.jpg"  width="100%" height="auto" alt="">
+                <p>Servicio de Desinsectacion (en la jerga DI)</p>
+            </div>  
+            <div class="col-12 d-none d-xl-block d-lg-block d-md-block col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
+                <img src="./assets/imagenes/equipo tecnico.jpg" width="100%" height="auto" alt="">
+                <p>Servicio de desratización (en la jerga DR)</p>
+            </div>  
+            <div class=" col-12 d-none d-xl-block d-lg-block col-md-6 col-lg-4 col-xl-4 mb-3 mb-xl-1">
+                <img src="./assets/imagenes/aplicador.jpg" width="100%" height="auto" alt="">
+                <p>dervicio de control de larvasen espacios verdes (en la jerga CL)/p>
+            </div>
+            <div class="col-6 col-md-12 col-lg-12 col-xl12 d-flex justify-content-center align-items-center">
+                <p>Estos son solo algunos de las cuantiosas operaciones y servicios que estamos en condiciones de poder ofrecerle<a href="./maquinaria/maquinaria.html" class="linksentext">conocer más</a>
+                </p>
+            </div>
         </div>
     </section>
     <footer class="headerfooter">
@@ -130,44 +155,39 @@
                     </div>
             </div>
         </section>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="well well-sm">
                         <form class="form-horizontal" method="post">
                             <fieldset>
                                 <legend class="text-center header">Contactanos</legend>
-                                <div class="formAreas form-group">
-                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user small"></i></span>
-                                    <div class="col-md-8">
+                                <div class="form-group mb-4 mt-1">
+                                    <div class="col-md-12">
                                         <input id="fname" name="name" type="text" placeholder="Nombre y apellido" class="form-control">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-location-pin small"></i></i></span>
-                                    <div class="col-md-8">
+                                <div class="form-group mb-4 mt-3">
+                                    <div class="col-md-12">
                                         <input id="lname" name="name" type="text" placeholder="¿De qué zona sos?" class="form-control">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o small"></i></span>
-                                    <div class="col-md-8">
+                                <div class="form-group mb-4 mt-3">
+                                    <div class="col-md-12">
                                         <input id="email" name="email" type="text" placeholder="Dejanos tu E-mail" class="form-control">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square small"></i></span>
-                                    <div class="col-md-8">
+                                <div class="form-group mb-4 mt-3">
+                                    <div class="col-md-12">
                                         <input id="phone" name="phone" type="text" placeholder="Dejanos tu Nümero telefonoico" class="form-control">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o small"></i></span>
-                                    <div class="col-md-8">
+                                <div class="form-group mb-4 mt-3">   
+                                    <div class="col-md-12">
                                         <textarea class="form-control" id="message" name="message" placeholder="¿Que tipo de servicio estarías estando necesitando?." rows="7"></textarea>
                                     </div>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group mb-4 mt-3">
                                     <div class="col-md-12 text-center">
                                         <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                                     </div>
