--- a/servicios/servicios.html
+++ b/servicios/servicios.html
@@ -24,14 +24,14 @@
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-block d-xl-block "><a href="../index.html"><img src="../assets/imagenes/LOGO_alt4.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-block d-xl-block "><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
                 <div class="col-6 col-md-6 col-lg-6 col-xl-6 d-none d-md-none d-lg-flex justify-content-between d-xl-flex align-items-center">
-                        <ul>
-                            <li><a class="navbarheader" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
-                            <li><a class="navbarheader" href="../maquinaria/maquinaria.html">maquinaria</a></li>
-                            <li><a class="navbarheader" href="../productos/productos.html">productos</a></li>
-                            <li><a class="navbarheader" href="../servicios/servicios.html">servicios</a></li>
-                        </ul>
+                    <ul>
+                        <li><a class="navbarheaderN" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
+                        <li><a class="navbarheaderM" href="../maquinaria/maquinaria.html">maquinaria</a></li>
+                        <li><a class="navbarheaderP" href="../productos/productos.html">productos</a></li>
+                        <li><a class="navbarheaderS" href="../servicios/servicios.html">servicios</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="row justify-content-between">
